@@ -38,6 +38,7 @@ This release also includes changes from <<release-3-3-6, 3.3.6>>.
 * Release working buffers in case of failure for GraphBinary.
 * GraphBinary: Use the same `ByteBuf` instance to write during serialization. Changed signature of write methods in type serializers.
 * Remove unused parameter in GraphBinary's `ResponseMessageSerializer`.
+* Changed `SparqlTraversalSource` so as to enable Gremlin steps to be used to process results from the `sparql()` step.
 * GraphBinary: Cache expression to obtain the method in `PSerializer`.
 
 [[release-3-4-0]]
